# musclemap-bench

./: CURSOR_MAIN_PROMPT.md  IMPLEMENTATION_PLAN.md  README.md  TASK_PROMPTS.md  config.yaml  environment-kinesis.yml  environment.yml  pyproject.toml
.cursor/rules/: benchmarking.mdc
data/curves/: test_paired_metrics.csv  val_metrics copy.csv  val_metrics.csv
data/kinesis_artifacts/: Acting_like_a_baby_and_standing_at_the_same_time_clip1.npy  (+283 more)
musclemap_bench.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebooks/: kinesis_comparison.ipynb  plot_results.ipynb  thesis_figures.ipynb
precompute/: __init__.py  run_kinesis.py
results/: best_val_example.json  inference_profile.json  kinesis_triple_comparison.csv  kinesis_triple_summary.csv  layer2_skipped.txt  results.json  summary_metrics.csv  table_layer1.tex  table_layer1_paired.tex  table_resources.tex
scripts/: build_muscle_mapping.py  build_test_paired_curves.py  build_training_curves.py  generate_thesis_plots.py  pick_best_val_example.py  profile_inference.py  profile_paired_inference.py  quick_smoke.py  rebuild_kinesis_comparison_nb.py  rebuild_thesis_figures_nb.py  render_best_val_body.py  render_kinesis_vis.py  render_report.py  run_benchmark.py
src/: __init__.py  align.py  body_visualization.py  curve_data.py  inference.py  loaders.py  metrics_l1.py  metrics_l2.py  paired_eval.py  report.py  resources.py  test_split.py
tests/: test_align.py  test_curve_data.py  test_inference.py  test_loaders.py  test_metrics_l1.py  test_metrics_l2.py  test_report.py  test_run_kinesis.py
(+6 files in other folders)
