[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "musclemap-bench"
version = "0.1.0"
description = "Benchmark suite for MuscleMAP: biomechanics accuracy vs Kinesis, text-to-motion quality vs MotionGPT"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Maxim" }]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.12",
  "matplotlib>=3.8",
  "tqdm>=4.66",
  "pyyaml>=6.0",
  "pandas>=2.2",
  "seaborn>=0.13",
  "fastdtw>=0.3.4",
  "pytest>=8.0",
]

[project.optional-dependencies]
torch = ["torch>=2.1"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "integration: requires real checkpoints and dataset",
  "kinesis: requires Kinesis/MyoSuite environment",
]
